[gd_scene load_steps=14 format=3 uid="uid://cnk32sx0cngen"]

[ext_resource type="Texture2D" uid="uid://dfl2i8410rtga" path="res://world/roads2W64x64.png" id="1_bt5ip"]
[ext_resource type="Script" path="res://world/world.gd" id="1_oyyc2"]
[ext_resource type="Texture2D" uid="uid://6raosmfcl0qr" path="res://world/street.png" id="2_l4jhm"]
[ext_resource type="Texture2D" uid="uid://rxvvxr1ybp53" path="res://world/roads2W64x64 (2).png" id="3_7kxty"]
[ext_resource type="PackedScene" uid="uid://boi8kulm22ofw" path="res://player/player.tscn" id="3_38be6"]
[ext_resource type="Texture2D" uid="uid://b7h7vinov3qp0" path="res://world/U Parkin_preview_rev_1.png" id="5_xnget"]
[ext_resource type="Texture2D" uid="uid://gq28i8kljgeb" path="res://world/Phone Parking.png" id="6_pivqm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4vt2p"]
texture = ExtResource("1_bt5ip")
texture_region_size = Vector2i(64, 64)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3oc4j"]
texture = ExtResource("2_l4jhm")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
10:6/0 = 0
10:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:6/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g17ug"]
texture = ExtResource("3_7kxty")
texture_region_size = Vector2i(64, 64)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_vgrgk"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_4vt2p")
sources/1 = SubResource("TileSetAtlasSource_3oc4j")
sources/2 = SubResource("TileSetAtlasSource_g17ug")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4sb7b"]
radius = 21.0
height = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adpjt"]
size = Vector2(33, 57)

[node name="World" type="Node2D"]
script = ExtResource("1_oyyc2")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_vgrgk")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 131074, 1, 0, 131074, 1, 65536, 131074, 1, 131072, 131074, 1, 196608, 131074, 1, 262144, 131074, 1, 327680, 131074, 1, 393216, 131074, 1, 458752, 131074, 1, 524288, 131074, 1, 589824, 131074, 1, 655360, 131074, 1, 720896, 131074, 1, -65535, 131074, 1, 1, 0, 1, 65537, 196608, 0, 131073, 458752, 1, 196609, 196608, 0, 262145, 458752, 1, 327681, 196608, 0, 393217, 458752, 1, 458753, 196608, 0, 524289, 196608, 0, 589825, 196608, 0, 655361, 196608, 0, 720897, 131074, 1, -65534, 131074, 1, 2, 131072, 0, 65538, 131074, 1, 131074, 0, 0, 196610, 131074, 1, 262146, 0, 0, 327682, 131074, 1, 393218, 0, 0, 458754, 131074, 1, 524290, 131074, 1, 589826, 131074, 1, 655362, 131074, 1, 720898, 131074, 1, -65533, 131074, 1, 3, 131072, 0, 65539, 131074, 1, 131075, 65536, 0, 196611, 131074, 1, 262147, 65536, 0, 327683, 131074, 1, 393219, 65536, 0, 458755, 131074, 1, 524291, 131074, 1, 589827, 131074, 1, 655363, 131074, 1, 720899, 131074, 1, -65532, 131074, 1, 4, 131072, 0, 65540, 131074, 1, 131076, 393216, 0, 196612, 131074, 1, 262148, 393216, 0, 327684, 131074, 1, 393220, 393216, 0, 458756, 131074, 1, 524292, 131074, 1, 589828, 131074, 1, 655364, 131074, 1, 720900, 131074, 1, -65531, 131074, 1, 5, 131072, 0, 65541, 131074, 1, 131077, 131074, 1, 196613, 131074, 1, 262149, 131074, 1, 327685, 131074, 1, 393221, 131074, 1, 458757, 131074, 1, 524293, 131074, 1, 589829, 131074, 1, 655365, 131074, 1, 720901, 131074, 1, -65530, 131074, 1, 6, 131072, 0, 65542, 131074, 1, 131078, 131074, 1, 196614, 131074, 1, 262150, 131074, 1, 327686, 131074, 1, 393222, 131074, 1, 458758, 131074, 1, 524294, 131074, 1, 589830, 131074, 1, 655366, 131074, 1, 720902, 131074, 1, -65529, 131074, 1, 7, 131072, 0, 65543, 131074, 1, 131079, 131074, 1, 196615, 131074, 1, 262151, 131074, 1, 327687, 131074, 1, 393223, 131074, 1, 458759, 131074, 1, 524295, 131074, 1, 589831, 131074, 1, 655367, 131074, 1, 720903, 131074, 1, -65528, 131074, 1, 8, 131072, 0, 65544, 131074, 1, 131080, 131074, 1, 196616, 131074, 1, 262152, 131074, 1, 327688, 131074, 1, 393224, 131074, 1, 458760, 131074, 1, 524296, 131074, 1, 589832, 131074, 1, 655368, 131074, 1, 720904, 131074, 1, -65527, 131074, 1, 9, 131072, 0, 65545, 131074, 1, 131081, 131074, 1, 196617, 131074, 1, 262153, 131074, 1, 327689, 131074, 1, 393225, 131074, 1, 458761, 131074, 1, 524297, 131074, 1, 589833, 131074, 1, 655369, 131074, 1, 720905, 131074, 1, -65526, 131074, 1, 10, 131072, 0, 65546, 131074, 1, 131082, 131074, 1, 196618, 131074, 1, 262154, 131074, 1, 327690, 131074, 1, 393226, 131074, 1, 458762, 131074, 1, 524298, 131074, 1, 589834, 131074, 1, 655370, 131074, 1, 720906, 131074, 1, -65525, 131074, 1, 11, 131072, 0, 65547, 131074, 1, 131083, 458752, 0, 196619, 131074, 1, 262155, 458752, 0, 327691, 131074, 1, 393227, 458752, 0, 458763, 131074, 1, 524299, 458752, 0, 589835, 131074, 1, 655371, 131074, 1, 720907, 131074, 1, -65524, 131074, 1, 720908, 131074, 1, -65523, 131074, 1, 720909, 131074, 1, -65522, 131074, 1, 720910, 131074, 1, -65521, 131074, 1, 720911, 131074, 1, -65520, 131074, 1, 16, 131074, 1, 65552, 131074, 1, 131088, 131074, 1, 196624, 131074, 1, 262160, 131074, 1, 327696, 131074, 1, 393232, 131074, 1, 458768, 131074, 1, 524304, 131074, 1, 589840, 131074, 1, 655376, 131074, 1, 720912, 131074, 1, -65519, 131074, 1, 17, 131074, 1, 65553, 131074, 1, 131089, 131074, 1, 196625, 131074, 1, 262161, 131074, 1, 327697, 131074, 1, 393233, 131074, 1, 458769, 131074, 1, 524305, 131074, 1, 589841, 131074, 1, 655377, 131074, 1, 720913, 131074, 1, -65518, 131074, 1, 18, 131074, 1, 65554, 131074, 1, 131090, 131074, 1, 196626, 131074, 1, 262162, 131074, 1, 327698, 131074, 1, 393234, 131074, 1, 458770, 131074, 1, 524306, 131074, 1, 589842, 131074, 1, 655378, 131074, 1, 720914, 131074, 1, -65517, 131074, 1, 19, 131074, 1, 65555, 131074, 1, 131091, 131074, 1, 196627, 131074, 1, 262163, 131074, 1, 327699, 131074, 1, 393235, 131074, 1, 458771, 131074, 1, 524307, 131074, 1, 589843, 131074, 1, 655379, 131074, 1, 720915, 131074, 1, -65516, 131074, 1, 20, 131074, 1, 65556, 131074, 1, 131092, 131074, 1, 196628, 131074, 1, 262164, 131074, 1, 327700, 131074, 1, 393236, 131074, 1, 458772, 131074, 1, 524308, 131074, 1, 589844, 131074, 1, 655380, 131074, 1, 720916, 131074, 1, -65515, 131074, 1, 21, 131074, 1, 65557, 131074, 1, 131093, 131074, 1, 196629, 131074, 1, 262165, 131074, 1, 327701, 131074, 1, 393237, 131074, 1, 458773, 131074, 1, 524309, 131074, 1, 589845, 131074, 1, 655381, 131074, 1, 720917, 131074, 1, 12, 131072, 0, 65548, 131074, 1, 131084, 0, 0, 196620, 131074, 1, 262156, 0, 0, 327692, 131074, 1, 393228, 0, 0, 458764, 131074, 1, 524300, 0, 0, 589836, 131074, 1, 655372, 131074, 1, 13, 131072, 0, 65549, 131074, 1, 131085, 65536, 0, 196621, 131074, 1, 262157, 65536, 0, 327693, 131074, 1, 393229, 65536, 0, 458765, 131074, 1, 524301, 65536, 0, 589837, 131074, 1, 655373, 131074, 1, 14, 65536, 1, 65550, 196608, 0, 131086, 393216, 1, 196622, 196608, 0, 262158, 393216, 1, 327694, 196608, 0, 393230, 393216, 1, 458766, 196608, 0, 524302, 393216, 1, 589838, 196608, 0, 655374, 196608, 0, 15, 131074, 1, 65551, 131074, 1, 131087, 131074, 1, 196623, 131074, 1, 262159, 131074, 1, 327695, 131074, 1, 393231, 131074, 1, 458767, 131074, 1, 524303, 131074, 1, 589839, 131074, 1, 655375, 131074, 1)

[node name="PlayerContainer" type="Node2D" parent="."]

[node name="Player" parent="PlayerContainer" instance=ExtResource("3_38be6")]
position = Vector2(94, 645)
scale = Vector2(0.6, 0.6)

[node name="ParkSensors" type="Node2D" parent="."]
position = Vector2(63, 1)

[node name="Sensor_P1_A" type="Area2D" parent="ParkSensors"]
position = Vector2(128, 159)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParkSensors/Sensor_P1_A"]
shape = SubResource("CapsuleShape2D_4sb7b")

[node name="Sensor_P1_B" type="Area2D" parent="ParkSensors"]
position = Vector2(128, 288)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParkSensors/Sensor_P1_B"]
shape = SubResource("CapsuleShape2D_4sb7b")

[node name="Sensor_P1_C" type="Area2D" parent="ParkSensors"]
position = Vector2(128, 416)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParkSensors/Sensor_P1_C"]
shape = SubResource("CapsuleShape2D_4sb7b")

[node name="Sensor_P2_A" type="Area2D" parent="ParkSensors"]
position = Vector2(767, 158)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParkSensors/Sensor_P2_A"]
shape = SubResource("CapsuleShape2D_4sb7b")

[node name="Sensor_P2_B" type="Area2D" parent="ParkSensors"]
position = Vector2(766, 285)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParkSensors/Sensor_P2_B"]
shape = SubResource("CapsuleShape2D_4sb7b")

[node name="Sensor_P2_C" type="Area2D" parent="ParkSensors"]
position = Vector2(765, 414)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParkSensors/Sensor_P2_C"]
shape = SubResource("CapsuleShape2D_4sb7b")

[node name="Sensor_P2_D" type="Area2D" parent="ParkSensors"]
position = Vector2(765, 542)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParkSensors/Sensor_P2_D"]
shape = SubResource("CapsuleShape2D_4sb7b")

[node name="U" type="Sprite2D" parent="."]
position = Vector2(507.25, 340)
scale = Vector2(1.097, 1.374)
texture = ExtResource("5_xnget")

[node name="MovilApp" type="Node2D" parent="."]

[node name="Phone" type="Sprite2D" parent="MovilApp"]
position = Vector2(1144, 382)
scale = Vector2(1.2, 1.2)
texture = ExtResource("6_pivqm")

[node name="ScreenApp" type="Control" parent="MovilApp"]
layout_mode = 3
anchors_preset = 0
offset_left = 1029.0
offset_top = 144.0
offset_right = 1259.0
offset_bottom = 632.0

[node name="Pos Parking 1" type="Label" parent="MovilApp/ScreenApp"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -103.0
offset_right = 103.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Puesto de parqueo 1"
horizontal_alignment = 1

[node name="Pos" type="Label" parent="MovilApp/ScreenApp/Pos Parking 1"]
layout_mode = 0
offset_left = -1.0
offset_top = 35.0
offset_right = 60.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Sitio A:
Sitio B:
Sitio C :"

[node name="Pos Parking 2" type="Label" parent="MovilApp/ScreenApp"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -103.0
offset_top = 159.0
offset_right = 103.0
offset_bottom = 192.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Puesto de parqueo 2"
horizontal_alignment = 1

[node name="Pos" type="Label" parent="MovilApp/ScreenApp/Pos Parking 2"]
layout_mode = 0
offset_left = -1.0
offset_top = 35.0
offset_right = 60.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Sitio A:
Sitio B:
Sitio C :
Sitio D:"

[node name="DispPosLight" type="Control" parent="MovilApp/ScreenApp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Light_1A" type="ColorRect" parent="MovilApp/ScreenApp/DispPosLight"]
layout_mode = 0
offset_left = 87.0
offset_top = 43.0
offset_right = 158.0
offset_bottom = 60.0
color = Color(0, 1, 0, 1)

[node name="Light_1B" type="ColorRect" parent="MovilApp/ScreenApp/DispPosLight"]
layout_mode = 0
offset_left = 87.0
offset_top = 73.0
offset_right = 158.0
offset_bottom = 90.0
color = Color(0, 1, 0, 1)

[node name="Light_1C" type="ColorRect" parent="MovilApp/ScreenApp/DispPosLight"]
layout_mode = 0
offset_left = 87.0
offset_top = 105.0
offset_right = 158.0
offset_bottom = 122.0
color = Color(0, 1, 0, 1)

[node name="Light_2A" type="ColorRect" parent="MovilApp/ScreenApp/DispPosLight"]
layout_mode = 0
offset_left = 88.0
offset_top = 202.0
offset_right = 159.0
offset_bottom = 219.0
color = Color(0, 1, 0, 1)

[node name="Light_2B" type="ColorRect" parent="MovilApp/ScreenApp/DispPosLight"]
layout_mode = 0
offset_left = 88.0
offset_top = 232.0
offset_right = 159.0
offset_bottom = 249.0
color = Color(0, 1, 0, 1)

[node name="Light_2C" type="ColorRect" parent="MovilApp/ScreenApp/DispPosLight"]
layout_mode = 0
offset_left = 88.0
offset_top = 264.0
offset_right = 159.0
offset_bottom = 281.0
color = Color(0, 1, 0, 1)

[node name="Light_2D" type="ColorRect" parent="MovilApp/ScreenApp/DispPosLight"]
layout_mode = 0
offset_left = 88.0
offset_top = 294.0
offset_right = 159.0
offset_bottom = 311.0
color = Color(0, 1, 0, 1)

[node name="AreaOut" type="Area2D" parent="."]
position = Vector2(928, 699)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOut"]
shape = SubResource("RectangleShape2D_adpjt")

[node name="Parking Station 1" type="Label" parent="."]
offset_left = 39.0
offset_top = 136.0
offset_right = 79.0
offset_bottom = 496.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "P
U
E
S
T
O

1 "

[node name="Sites" type="Label" parent="Parking Station 1"]
layout_mode = 0
offset_left = 143.0
offset_top = 48.0
offset_right = 183.0
offset_bottom = 543.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "A


B


C"

[node name="Parking Station 2" type="Label" parent="."]
offset_left = 964.0
offset_top = 168.0
offset_right = 1004.0
offset_bottom = 528.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "P
U
E
S
T
O

2"

[node name="Sites" type="Label" parent="Parking Station 2"]
layout_mode = 0
offset_left = -143.0
offset_top = 16.0
offset_right = -103.0
offset_bottom = 511.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "A


B


C


D"

[node name="ButtonAddVehi" type="Button" parent="."]
offset_left = 134.0
offset_top = 656.0
offset_right = 231.0
offset_bottom = 687.0
scale = Vector2(1.5, 1.5)
text = "+1 Vehiculo"

[node name="PosSpawnVehi" type="Marker2D" parent="."]
position = Vector2(94, 645)

[connection signal="Clicked" from="PlayerContainer/Player" to="." method="_on_player_clicked"]
[connection signal="body_entered" from="ParkSensors/Sensor_P1_A" to="." method="_on_sensor_p_1_a_body_entered"]
[connection signal="body_exited" from="ParkSensors/Sensor_P1_A" to="." method="_on_sensor_p_1_a_body_exited"]
[connection signal="body_entered" from="ParkSensors/Sensor_P1_B" to="." method="_on_sensor_p_1_b_body_entered"]
[connection signal="body_exited" from="ParkSensors/Sensor_P1_B" to="." method="_on_sensor_p_1_b_body_exited"]
[connection signal="body_entered" from="ParkSensors/Sensor_P1_C" to="." method="_on_sensor_p_1_c_body_entered"]
[connection signal="body_exited" from="ParkSensors/Sensor_P1_C" to="." method="_on_sensor_p_1_c_body_exited"]
[connection signal="body_entered" from="ParkSensors/Sensor_P2_A" to="." method="_on_sensor_p_2_a_body_entered"]
[connection signal="body_exited" from="ParkSensors/Sensor_P2_A" to="." method="_on_sensor_p_2_a_body_exited"]
[connection signal="body_entered" from="ParkSensors/Sensor_P2_B" to="." method="_on_sensor_p_2_b_body_entered"]
[connection signal="body_exited" from="ParkSensors/Sensor_P2_B" to="." method="_on_sensor_p_2_b_body_exited"]
[connection signal="body_entered" from="ParkSensors/Sensor_P2_C" to="." method="_on_sensor_p_2_c_body_entered"]
[connection signal="body_exited" from="ParkSensors/Sensor_P2_C" to="." method="_on_sensor_p_2_c_body_exited"]
[connection signal="body_entered" from="ParkSensors/Sensor_P2_D" to="." method="_on_sensor_p_2_d_body_entered"]
[connection signal="body_exited" from="ParkSensors/Sensor_P2_D" to="." method="_on_sensor_p_2_d_body_exited"]
[connection signal="body_entered" from="AreaOut" to="." method="_on_area_out_body_entered"]
[connection signal="button_up" from="ButtonAddVehi" to="." method="_on_button_add_vehi_button_up"]
